--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <button id="predict-button">Predecir Número</button>
     <p>Número reconocido: <span id="prediction"></span></p>
-    <script src="./index_files/script.js.descarga"></script>
+    <script src="script.js"></script>
 
 
 </body></html>
