--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0116)https://cursos-udem.blackboard.com/bbcswebdav/pid-6949693-dt-content-rid-174170696_1/courses/27815.202421/index.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Reconocimiento de Números con TensorFlow.js</title>
-    <script src="./index_files/tfjs@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
     <style>
         canvas {
             border: 1px solid black;
